Fixed the navigation links being cut off on tablets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,7 @@ footer {
     }
     #menu {
         display: flex;
+        flex-wrap: wrap;
     }
     #menu > li {
         padding-left: 40px;
